--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,38 @@
         android:text="Save Post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/getPostButtonId3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022"
+        app:layout_constraintVertical_bias="0.069"
+        app:toggleCheckedStateOnClick="false" />
+
+    <Button
+        android:id="@+id/deleteButtonId"
+        android:layout_width="122dp"
+        android:layout_height="72dp"
+        android:onClick="deletePost"
+        android:text="Delete Post"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355"
+        app:toggleCheckedStateOnClick="false" />
+
+    <Button
+        android:id="@+id/updateButtonID"
+        android:layout_width="122dp"
+        android:layout_height="72dp"
+        android:onClick="updatePost"
+        android:text="Update Post"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355"
         app:toggleCheckedStateOnClick="false" />
 
     <EditText
@@ -97,8 +125,8 @@
 
     <ListView
         android:id="@+id/postListId"
-        android:layout_width="357dp"
-        android:layout_height="453dp"
+        android:layout_width="371dp"
+        android:layout_height="325dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
